--- a/src/features/registation/Registration.module.css
+++ b/src/features/registation/Registration.module.css
@@ -1,73 +1,70 @@
-
 .registration {
-    width: 413px;
-    height: 528px;
-    background: #FFFFFF;
-    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1), -1px -1px 2px rgba(0, 0, 0, 0.1);
-    border-radius: 2px;
-    margin: auto;
+  width: 413px;
+  height: 528px;
+  background: #ffffff;
+  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1), -1px -1px 2px rgba(0, 0, 0, 0.1);
+  border-radius: 2px;
+  margin: auto;
 }
 
 .registration h2 {
-    padding-top: 35px;
-    font-family: 'Montserrat',sans-serif;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 26px;
-    line-height: 32px;
-    color: #000000;
-    text-align: center;
+  padding-top: 35px;
+  font-family: 'Montserrat', sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 26px;
+  line-height: 32px;
+  color: #000000;
+  text-align: center;
 }
 
 .registration form {
-    max-width: 347px;
-    padding-left: 33px;
-    text-align: left;
-    margin-top: 31px;
+  max-width: 347px;
+  padding-left: 33px;
+  text-align: left;
+  margin-top: 31px;
 }
 
-
 .registration_button {
-    background: none;
-    border: none;
-    padding: 0;
-    font: inherit;
-    cursor: pointer;
-    outline: inherit;
-    margin-top: 60px;
-    background: #366EFF;
-    border-radius: 30px;
-    height: 36px;
-    width: 100%;
-    font-size: 16px;
-    line-height: 20px;
-    text-align: center;
-    letter-spacing: 0.01em;
-    color: #FFFFFF;
+  background: none;
+  border: none;
+  padding: 0;
+  font: inherit;
+  cursor: pointer;
+  outline: inherit;
+  margin-top: 60px;
+  background: #366eff;
+  border-radius: 30px;
+  height: 36px;
+  width: 100%;
+  font-size: 16px;
+  line-height: 20px;
+  text-align: center;
+  letter-spacing: 0.01em;
+  color: #ffffff;
 }
 
 .registration_error {
-    color: red;
-    margin-top: -80px;
-
+  color: red;
+  margin-top: -80px;
 }
 
-.registration_haveAccount{
-    font-weight: 600;
-    font-size: 14px;
-    line-height: 24px;
-    text-align: center;
-    color: #000000;
-    opacity: 0.5;
-    margin-top: 131px;
+.registration_haveAccount {
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 24px;
+  text-align: center;
+  color: #000000;
+  opacity: 0.5;
+  margin-top: 131px;
 }
 
 .registration_loginReference {
-    font-weight: 600;
-    font-size: 16px;
-    line-height: 24px;
-    text-align: center;
-    text-decoration-line: underline;
-    color: #366EFF;
-    margin-top: 0px;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 24px;
+  text-align: center;
+  text-decoration-line: underline;
+  color: #366eff;
+  margin-top: 0px;
 }
