--- a/src/features/login/Login.module.css
+++ b/src/features/login/Login.module.css
@@ -76,3 +76,25 @@
   color: black;
   text-decoration: none;
 }
+
+.btn {
+  cursor: pointer;
+
+  width: 100%;
+  height: 36px;
+  margin-top: 60px;
+  padding: 0;
+
+  font: inherit;
+  font-size: 16px;
+  line-height: 20px;
+  color: #ffffff;
+  text-align: center;
+  letter-spacing: 0.01em;
+
+  background: none;
+  background: #366eff;
+  border: none;
+  border-radius: 30px;
+  outline: inherit;
+}
