--- a/src/common/components/loader/Loader.module.css
+++ b/src/common/components/loader/Loader.module.css
@@ -1,29 +1,37 @@
+.loader_background {
+  position: absolute;
+  z-index: 1000;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
 
-.loader_background{
-   position: absolute;
-    top:0;
-    left:0;
-    right: 0;
-    bottom: 0;
-    z-index: 1000;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: gray;
-    opacity: 0.8;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  opacity: 0.8;
+  background-color: gray;
 }
 
 .loader {
-    border: 9px solid #f3f3f3;
-    border-top: 8px solid #366EFF;
-    border-radius: 50%;
-    width: 90px;
-    height: 90px;
-    animation: spin 1s linear infinite;
-    z-index: 1001;
+  z-index: 1001;
+
+  width: 90px;
+  height: 90px;
+
+  border: 9px solid #f3f3f3;
+  border-top: 8px solid #366eff;
+  border-radius: 50%;
+
+  animation: spin 1s linear infinite;
 }
 
 @keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
