--- a/src/features/forgotPassword/f4-common/forgotButton/ForgotButton.module.css
+++ b/src/features/forgotPassword/f4-common/forgotButton/ForgotButton.module.css
@@ -1,17 +1,19 @@
 .forgotButton {
-    margin-top: 25px;
-    width: 100%;
-    background: #366EFF;
-    box-shadow: 0px 4px 18px rgba(54, 110, 255, 0.35), inset 0px 1px 0px rgba(255, 255, 255, 0.3);
-    border-radius: 30px;
-    font-family: 'Montserrat', sans-serif;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 20px;
-    text-align: center;
-    letter-spacing: 0.01em;
-    color: #FFFFFF;
-    padding: 8px 0px;
-    border: none;
+  width: 100%;
+  margin-top: 25px;
+  padding: 8px 0;
+
+  font-family: 'Montserrat', sans-serif;
+  font-size: 16px;
+  font-weight: 600;
+  font-style: normal;
+  line-height: 20px;
+  color: #ffffff;
+  text-align: center;
+  letter-spacing: 0.01em;
+
+  background: #366eff;
+  border: none;
+  border-radius: 30px;
+  box-shadow: 0 4px 18px rgba(54, 110, 255, 0.35), inset 0 1px 0 rgba(255, 255, 255, 0.3);
 }
