--- a/src/features/registation/registrationInput/RegistrationInput.module.css
+++ b/src/features/registation/registrationInput/RegistrationInput.module.css
@@ -1,35 +1,56 @@
 .registration_input {
-    position: relative;
+  position: relative;
+}
+
+.registration_input:not(:last-child) {
+  margin-bottom: 18px;
 }
 
 .registrationLabel {
-    display: block;
-    font-weight: 400;
-    font-size: 13px;
-    line-height: 20px;
-    color: #000000;
-    opacity: 0.5;
-    margin-bottom: 0px;
+  display: block;
+
+  margin-bottom: 0;
+
+  font-size: 13px;
+  font-weight: 400;
+  line-height: 20px;
+  color: #000000;
+
+  opacity: 0.5;
 }
 
 .registration_input input {
-    display: block;
-    border: none;
-    border-bottom: 1px solid rgb(0, 0, 0, .2);
-    width: 100%;
-    color: #000000;
-    font-size: 16px;
-    cursor: pointer;
+  cursor: pointer;
+
+  display: block;
+
+  width: 100%;
+
+  font-size: 16px;
+  color: #000000;
+
+  border: none;
+  border-bottom: 1px solid rgb(0, 0, 0, 0.2);
 }
 
 .registration_input input:focus {
-    outline: none;
+  outline: none;
 }
 
 .registration_eye {
-    position: absolute;
-    display: inline-block;
-    right: 0;
-    bottom: 6px;
-    cursor: pointer;
+  /*position: absolute;*/
+  /*display: inline-block;*/
+  /*right: 0;*/
+  /*bottom: 6px;*/
+  /*cursor: pointer;*/
+
+  cursor: pointer;
+
+  position: absolute;
+  right: 0;
+  bottom: 2px;
+
+  display: inline-block;
+
+  width: 20px;
 }
