--- a/src/features/packs/p1-allPacks/AllPacks.module.css
+++ b/src/features/packs/p1-allPacks/AllPacks.module.css
@@ -25,3 +25,12 @@
 .allPacks_interface img {
     margin-top: 40px;
 }
+
+.allPacks_link, .allPacks_link:active, .allPacks_link:visited {
+    color: #000000;
+    text-decoration: none;
+}
+
+allPacks_link:visited {
+    text-decoration: underline;
+}
