--- a/src/features/header/Header.module.css
+++ b/src/features/header/Header.module.css
@@ -1,11 +1,23 @@
 .header {
+
+
+  height: 60px;
+
+  background-color: #fff;
+  box-shadow: 0 0 40px rgba(29, 33, 38, 0.1), 0 0 2px rgba(29, 33, 38, 0.1);
+
+  width: 100%;
+
+}
+
+.header_wrapper {
+  margin: 0px auto;
+  max-width: 1008px;
+
   display: flex;
   align-items: center;
   justify-content: space-between;
 
   height: 60px;
-  padding: 0 70px;
 
-  background-color: #fff;
-  box-shadow: 0 0 40px rgba(29, 33, 38, 0.1), 0 0 2px rgba(29, 33, 38, 0.1);
 }
