--- a/src/features/packs/p5-commonComponents/commonPackComponents/packsInput/PacksInput.module.css
+++ b/src/features/packs/p5-commonComponents/commonPackComponents/packsInput/PacksInput.module.css
@@ -17,7 +17,8 @@
 }
 
 .packsInput {
-    margin-top: 8px;
+    width: 100%;
+    box-sizing: border-box;
     background: #FFFFFF;
     border: 1px solid #D9D9D9;
     border-radius: 2px;
@@ -30,8 +31,8 @@
     font-weight: 400;
     font-size: 14px;
     line-height: 24px;
-    color: #000000 ;
-
+    color: #000000;
+    margin-top: 0;
 }
 
 .packsInput:focus {
