--- a/src/features/packs/p5-commonComponents/usefullComponents/numberOfCards/NumberOfCards.module.css
+++ b/src/features/packs/p5-commonComponents/usefullComponents/numberOfCards/NumberOfCards.module.css
@@ -18,8 +18,8 @@
 }
 
 .numberOfCards_minValue, .numberOfCards_maxValue {
-    width: 36px;
-    height: 36px;
+    width: 34px;
+    height: 34px;
     background: #FFFFFF;
     border: 1px solid #D9D9D9;
     border-radius: 2px;
@@ -32,6 +32,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 3px;
 }
 
 .numberOfCards_minValue {
