--- a/src/features/packs/p5-commonComponents/usefullComponents/showPacksCards/ShowPacksCards.module.css
+++ b/src/features/packs/p5-commonComponents/usefullComponents/showPacksCards/ShowPacksCards.module.css
@@ -9,6 +9,8 @@
     font-size: 14px;
     line-height: 17px;
     color: #000000;
+     margin-top: 10px;
+     margin-bottom: 5px;
 }
 
 .showPacksCards_wrapper {
