feat: week 2 final merge

--- a/src/features/packs/p1-allPacks/AllPacks.module.css
+++ b/src/features/packs/p1-allPacks/AllPacks.module.css
@@ -34,3 +34,9 @@
 allPacks_link:visited {
     text-decoration: underline;
 }
+
+.allPacks_noPacksWasFound {
+    margin-top: 100px;
+    font-weight: 600;
+    font-size: 20px;
+}
