--- a/src/common/components/loader/Loader.module.css
+++ b/src/common/components/loader/Loader.module.css
@@ -8,17 +8,18 @@
   display: flex;
   align-items: center;
   justify-content: center;
-    background: rgba(50, 50, 50, 0.2)
+
 }
 
 .loader {
   z-index: 1001;
   width: 90px;
   height: 90px;
-  border: 9px solid #f3f3f3;
-  border-top: 8px solid #366eff;
+  border: 20px solid #f3f3f3;
+  border-top: 15px solid #366eff;
   border-radius: 50%;
   animation: spin 1s linear infinite;
+  margin-top: 20%;
 }
 
 @keyframes spin {
