--- a/src/features/packs/p1-allPacks/actions/ActionsWithPacks.module.css
+++ b/src/features/packs/p1-allPacks/actions/ActionsWithPacks.module.css
@@ -12,6 +12,7 @@
     background-color: #fff;
     background-repeat: no-repeat;
     padding-left: 20px;
+    cursor: pointer;
 }
 
 .actionsWithPacks button:hover {
