--- a/src/common/components/button/Button.module.css
+++ b/src/common/components/button/Button.module.css
@@ -1,13 +1,15 @@
 .btn {
   cursor: pointer;
 
+  transform: translateY(0);
+
   display: flex;
   align-items: center;
   justify-content: center;
 
   width: 100%;
   height: 36px;
-  padding: 10px 15px;
+  padding: 10px 30px;
 
   font: inherit;
   font-size: 16px;
@@ -21,4 +23,15 @@
   border: none;
   border-radius: 30px;
   outline: inherit;
+  box-shadow: 0 4px 18px rgba(109, 109, 109, 0.25), inset 0 1px 0 rgba(255, 255, 255, 0.3);
+}
+
+.btn:active {
+  transform: translateY(2px);
+
+  box-shadow: 0 2px 8px rgba(109, 109, 109, 0.25), inset 0 1px 0 rgba(255, 255, 255, 0.3);
+}
+
+.btn:disabled {
+  opacity: 0.5;
 }
