--- a/src/features/modals/DeleteModal/DeleteModal.module.css
+++ b/src/features/modals/DeleteModal/DeleteModal.module.css
@@ -8,7 +8,7 @@
   margin: 0;
 
   font-family: 'Montserrat', sans-serif;
-  font-size: 18px;
+  font-size: 20px;
   font-weight: 500;
   font-style: normal;
   line-height: 22px;
@@ -19,12 +19,12 @@
 }
 
 .contentBox span {
-  display: inline-block;
+  display: block;
 
-  margin-bottom: 20px;
+  margin-bottom: 24px;
 
   font-family: 'Montserrat', sans-serif;
-  font-size: 14px;
+  font-size: 15px;
   font-weight: 400;
   font-style: normal;
   line-height: 24px;
