--- a/src/features/packs/p1-allPacks/actions/ActionsWithPacks.module.css
+++ b/src/features/packs/p1-allPacks/actions/ActionsWithPacks.module.css
@@ -1,23 +1,25 @@
 .actionsWithPacks {
-    display: flex;
-    flex-wrap: nowrap;
-    width: 50px;
+  display: flex;
+  flex-wrap: nowrap;
+
+  width: 50px;
 }
 
-.actionsWithPacks button {
-    border: none;
-    outline: none;
-    width: 16px;
-    height: 16px;
-    background-color: #fff;
-    background-repeat: no-repeat;
-    padding-left: 20px;
-    cursor: pointer;
+.actionsWithPacks img {
+  cursor: pointer;
+
+  width: 16px;
+  height: 16px;
+  margin-right: 10px;
+
+  background-color: #fff;
+  background-repeat: no-repeat;
+  border: none;
+  outline: none;
+
+  transition: 0.2s;
 }
 
-.actionsWithPacks button:hover {
-    width: 18px;
-    height: 18px;
-    background-size: 18px 18px;
+.actionsWithPacks img:hover {
+  transform: scale(1.25);
 }
-
