--- a/src/common/components/button/Button.module.css
+++ b/src/common/components/button/Button.module.css
@@ -24,6 +24,8 @@
   border-radius: 30px;
   outline: inherit;
   box-shadow: 0 4px 18px rgba(109, 109, 109, 0.25), inset 0 1px 0 rgba(255, 255, 255, 0.3);
+
+  transition: all 0.2s;
 }
 
 .btn:active {
