--- a/src/features/learn/Learn.module.css
+++ b/src/features/learn/Learn.module.css
@@ -10,7 +10,7 @@
 }
 
 .learn_body {
-    margin: auto;
+    margin: 18px auto auto;
     max-width: 439px;
     box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1), -1px -1px 2px rgba(0, 0, 0, 0.1);
     border-radius: 2px;
