--- a/src/features/learn/commonComponentsLearn/c1-learnTitle/LearnTitle.module.css
+++ b/src/features/learn/commonComponentsLearn/c1-learnTitle/LearnTitle.module.css
@@ -1,10 +1,31 @@
-.learnTitle {
+
+.learnTitle, .learnTitle_text {
     padding-top: 0px;
-    margin: 0px auto 18px;
     font-family: 'Montserrat', sans-serif;
     font-style: normal;
     font-weight: 600;
     font-size: 22px;
     line-height: 27px;
     color: #000000;
+    overflow: auto;
+    width: 100%;
+    display: inline;
+}
+
+
+.learnTitle::-webkit-scrollbar {
+    width: 5px;
+    height: 5px;
+    border-radius: 10px;
+}
+
+.learnTitle::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+}
+
+.learnTitle::-webkit-scrollbar-thumb {
+    background-color: darkgrey;
+    outline: 1px solid slategrey;
+    border-radius: 10px;
 }
