--- a/src/features/learn/commonComponentsLearn/c2-question/Question.module.css
+++ b/src/features/learn/commonComponentsLearn/c2-question/Question.module.css
@@ -1,5 +1,7 @@
 .question {
     text-align: left;
+    width: 100%;
+
 }
 
 .question_text {
@@ -10,10 +12,14 @@
     line-height: 24px;
     color: #000000;
     margin-bottom: 13px;
+
 }
 
-.question_text span {
+.question_questionText {
+    width: 100%;
     font-weight: 500;
+    overflow-x: scroll;
+    display: inline;
 }
 
 .question_attempts {
@@ -25,4 +31,21 @@
     line-height: 24px;
     color: #000000;
     opacity: 0.5;
+}
+
+.question_questionText::-webkit-scrollbar {
+    width: 5px;
+    height: 5px;
+    border-radius: 10px;
+}
+
+.question_questionText::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+}
+
+.question_questionText::-webkit-scrollbar-thumb {
+    background-color: darkgrey;
+    outline: 1px solid slategrey;
+    border-radius: 10px;
 }
