--- a/src/features/learn/commonComponentsLearn/c3-answer/Answer.module.css
+++ b/src/features/learn/commonComponentsLearn/c3-answer/Answer.module.css
@@ -1,6 +1,8 @@
 .answer {
     text-align: left;
     margin-top: 10px;
+    overflow: auto;
+    width: 100%
 }
 
 .answer_text {
@@ -11,9 +13,29 @@
     line-height: 24px;
     color: #000000;
     margin-bottom: 13px;
+    display: inline;
 }
 
-.answer span {
+.answer_answerText {
     font-weight: 500;
+    width: 100%;
+    overflow-x: scroll;
+    display: inline;
 }
 
+.answer_answerText::-webkit-scrollbar {
+    width: 5px;
+    height: 5px;
+    border-radius: 10px;
+}
+
+.answer_answerText::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+}
+
+.answer_answerText::-webkit-scrollbar-thumb {
+    background-color: darkgrey;
+    outline: 1px solid slategrey;
+    border-radius: 10px;
+}
