--- a/src/features/packs/p1-allPacks/actions/ActionsWithPacks.module.css
+++ b/src/features/packs/p1-allPacks/actions/ActionsWithPacks.module.css
@@ -1,7 +1,7 @@
 .actionsWithPacks {
     display: flex;
     flex-wrap: nowrap;
-    width: 50px;
+    max-width: 50px;
 }
 
 .actionsWithPacks button {
