--- a/src/features/learn/commonComponentsLearn/c2-question/Question.module.css
+++ b/src/features/learn/commonComponentsLearn/c2-question/Question.module.css
@@ -1,7 +1,6 @@
 .question {
     text-align: left;
     width: 100%;
-
 }
 
 .question_text {
@@ -15,13 +14,6 @@
 
 }
 
-.question_questionText {
-    width: 100%;
-    font-weight: 500;
-    overflow-x: scroll;
-    display: inline;
-}
-
 .question_attempts {
     margin-bottom: 29px;
     font-family: 'Montserrat', sans-serif;
@@ -31,6 +23,13 @@
     line-height: 24px;
     color: #000000;
     opacity: 0.5;
+}
+
+.question_questionText {
+    width: 100%;
+    font-weight: 500;
+    overflow: auto;
+    display: inline-block;
 }
 
 .question_questionText::-webkit-scrollbar {
