--- a/src/features/modals/addUpdatePackModal/AddUpdatePackModal.module.css
+++ b/src/features/modals/addUpdatePackModal/AddUpdatePackModal.module.css
@@ -18,23 +18,8 @@
   padding: 24px 24px;
 }
 
-.contentBox span {
-  display: block;
-
-  margin-bottom: 24px;
-
-  font-family: 'Montserrat', sans-serif;
-  font-size: 15px;
-  font-weight: 400;
-  font-style: normal;
-  line-height: 24px;
-}
-
-.checkBoxContainer {
-  display: flex;
-  align-items: center;
-
-  margin-bottom: 24px;
+.error {
+  color: #da0606;
 }
 
 .buttonBox {
