--- a/src/features/modals/commonComponents/input/InputComponent.module.css
+++ b/src/features/modals/commonComponents/input/InputComponent.module.css
@@ -1,5 +1,7 @@
 .inputContainer {
   position: relative;
+
+  margin-bottom: 24px;
 }
 
 .inputLabel {
@@ -30,29 +32,25 @@
   border-bottom: 1px solid rgb(0, 0, 0, 0.2);
 }
 
-.inputContainer:not(:last-child) {
-  margin-bottom: 24px;
-}
-
 .input:focus {
   outline: none;
 }
 
-.checkBoxContainer {
-  margin: 24px 0 28px;
-}
+/*.checkBoxContainer {*/
+/*  margin: 24px 0 28px;*/
+/*}*/
 
-.loginCheckbox {
-  display: inline-block;
-}
+/*.loginCheckbox {*/
+/*  display: inline-block;*/
+/*}*/
 
-.rememberMeLabel {
-  cursor: pointer;
+/*.rememberMeLabel {*/
+/*  cursor: pointer;*/
 
-  margin-left: 12px;
+/*  margin-left: 12px;*/
 
-  font-size: 14px;
-  font-weight: 500;
-  line-height: 24px;
-  color: black;
-}
+/*  font-size: 14px;*/
+/*  font-weight: 500;*/
+/*  line-height: 24px;*/
+/*  color: black;*/
+/*}*/
