feat: adding ability to add image like pack cover and edit it

--- a/src/features/modals/addUpdatePackModal/AddUpdatePackModal.module.css
+++ b/src/features/modals/addUpdatePackModal/AddUpdatePackModal.module.css
@@ -18,6 +18,19 @@
   padding: 24px 24px;
 }
 
+.inputUploadButton {
+  position: relative;
+}
+
+.coverBox {
+  display: flex;
+  justify-content: center;
+}
+
+.cover {
+  width: 350px;
+}
+
 .error {
   color: #da0606;
 }
