--- a/src/features/learn/commonComponentsLearn/c2-question/Question.module.css
+++ b/src/features/learn/commonComponentsLearn/c2-question/Question.module.css
@@ -1,49 +1,62 @@
 .question {
-  text-align: left;
   width: 100%;
+
+  text-align: left;
 }
 
 .question_text {
+  margin-bottom: 13px;
+
   font-family: 'Montserrat', sans-serif;
-  font-style: normal;
-  font-weight: 600;
   font-size: 16px;
+  font-weight: 600;
+  font-style: normal;
   line-height: 24px;
   color: #000000;
-  margin-bottom: 13px;
 }
 
 .question_attempts {
   margin-bottom: 29px;
+
   font-family: 'Montserrat', sans-serif;
-  font-style: normal;
-  font-weight: 400;
   font-size: 14px;
+  font-weight: 400;
+  font-style: normal;
   line-height: 24px;
   color: #000000;
+
   opacity: 0.5;
 }
 
 .question_questionText {
-  width: 100%;
-  font-weight: 500;
   overflow: auto;
   display: inline-block;
+
+  width: 100%;
+
+  font-weight: 500;
 }
 
 .question_questionText::-webkit-scrollbar {
   width: 5px;
   height: 5px;
+
   border-radius: 10px;
 }
 
 .question_questionText::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.3);
   border-radius: 10px;
+  box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.3);
 }
 
 .question_questionText::-webkit-scrollbar-thumb {
   background-color: darkgrey;
-  outline: 1px solid slategrey;
   border-radius: 10px;
+  outline: 1px solid slategrey;
+}
+.questionImgBox {
+  text-align: center;
+}
+.questionImg {
+  width: 375px;
 }
