--- a/src/features/packs/p2-emptyPack/EmptyPack.module.css
+++ b/src/features/packs/p2-emptyPack/EmptyPack.module.css
@@ -1,17 +1,21 @@
 .emptyPacks_container {
-    width: 80%;
-    margin: 0px auto;
+  width: 80%;
+  margin: 0 auto;
 }
 
 .emptyPacks_info {
-    margin-top: 86px;
-    text-align: center;
-    font-family: 'Montserrat', sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 20px;
-    color: #000000;
-    opacity: 0.5;
-    margin-bottom: 32px;
+  margin: 32px 0;
+
+  font-family: 'Montserrat', sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  font-style: normal;
+  line-height: 20px;
+  color: #000000;
+  text-align: center;
+
+  opacity: 0.5;
+}
+.deckCoverBox {
+  text-align: left;
 }
