--- a/src/features/packs/p4-myPacks/MyPack.module.css
+++ b/src/features/packs/p4-myPacks/MyPack.module.css
@@ -7,13 +7,12 @@
   display: flex;
   align-items: baseline;
   justify-content: space-between;
-
-  margin-bottom: 8px;
 }
 
 .myPacks_titleMenu {
-  display: flex;
   position: relative;
+
+  display: flex;
 }
 
 .myPacks_titleMenu img {
@@ -29,4 +28,10 @@
 
   font-size: 20px;
   font-weight: 600;
+}
+.deckCoverBox {
+  text-align: left;
+}
+.deckCover {
+  width: 170px;
 }
