--- a/src/features/header/Header.module.css
+++ b/src/features/header/Header.module.css
@@ -9,3 +9,67 @@
   background-color: #fff;
   box-shadow: 0 0 40px rgba(29, 33, 38, 0.1), 0 0 2px rgba(29, 33, 38, 0.1);
 }
+
+.header_avatar {
+  cursor: pointer;
+
+  width: 36px;
+  height: 36px;
+
+  border-radius: 100%;
+}
+
+.headerAvatar {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.headerAvatar img {
+  display: inline-block;
+
+  margin-left: 5px;
+}
+
+.popUp {
+  cursor: pointer;
+
+  position: absolute;
+  z-index: 100;
+  top: 60px;
+  right: 100px;
+
+  box-sizing: border-box;
+  width: 122px;
+  height: 104px;
+  padding: 20px 10px;
+
+  text-align: left;
+
+  background-color: #ffffff;
+  border: 1px solid #cfcfcf;
+  border-radius: 3px;
+  box-shadow: 0 2px 15px rgba(0, 0, 0, 0.06);
+
+  animation: popupAnimation 0.3s;
+}
+
+.header_profile {
+  margin-bottom: 10px;
+}
+
+.header_profile span,
+.header_logout span {
+  display: inline-block;
+
+  padding-left: 10px;
+}
+
+@keyframes popupAnimation {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
