--- a/src/features/packs/p3-friendsPacks/FriendsPack.module.css
+++ b/src/features/packs/p3-friendsPacks/FriendsPack.module.css
@@ -1,20 +1,28 @@
 .friendsPack_container {
-    width: 80%;
-    margin: 0px auto;
+  width: 80%;
+  margin: 0px auto;
 }
 
 .friendsPack_titleAndButton {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 .friendsPack_table {
-    margin-top: 20px;
+  margin-top: 20px;
 }
 
 .friendsPack_noCardsWasFound {
-    margin-top: 100px;
-    font-weight: 600;
-    font-size: 20px;
+  margin-top: 100px;
+
+  font-size: 20px;
+  font-weight: 600;
+}
+
+.deckCoverBox {
+  text-align: left;
+}
+.deckCover {
+  width: 170px;
 }
