--- a/src/features/packs/p5-commonComponents/commonPackComponents/backToPackLists/BackToPackLists.module.css
+++ b/src/features/packs/p5-commonComponents/commonPackComponents/backToPackLists/BackToPackLists.module.css
@@ -1,16 +1,21 @@
-.backToPackLists{
-    text-align: left;
-    margin-top: 24px;
-    margin-bottom: 27px;
-    cursor: pointer;
+.backToPackLists {
+  cursor: pointer !important;
+
+  margin-top: 24px;
+  margin-bottom: 27px;
+
+  text-align: left;
 }
 
 .backToPackLists span {
-    padding-left: 8px;
-    font-family: 'Montserrat', sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 24px;
-    color: #000000;
+  cursor: pointer;
+
+  padding-left: 8px;
+
+  font-family: 'Montserrat', sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  font-style: normal;
+  line-height: 24px;
+  color: #000000;
 }
