--- a/src/features/profile/Profile.module.css
+++ b/src/features/profile/Profile.module.css
@@ -1,144 +1,182 @@
 .profile_container {
-    width: 100%;
-    max-width: 1000px;
-    margin: auto;
+  width: 100%;
+  max-width: 1000px;
+  margin: auto;
 }
 
 .profile_wrapper {
-    width: 413px;
-    height: auto;
-    background: #FFFFFF;
-    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1), -1px -1px 2px rgba(0, 0, 0, 0.1);
-    border-radius: 2px;
-    margin: auto;
-    padding: 27px 87px 36px;
-    box-sizing: border-box;
+  box-sizing: border-box;
+  width: 413px;
+  height: auto;
+  margin: auto;
+  padding: 27px 87px 36px;
+
+  background: #ffffff;
+  border-radius: 2px;
+  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1), -1px -1px 2px rgba(0, 0, 0, 0.1);
 }
 
 .profile_container h2 {
-    font-family: 'Montserrat', sans-serif;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 22px;
-    line-height: 27px;
-    color: #000000;
-    padding-top: 0;
-    margin-top: 0;
-    text-align: center;
-    margin-bottom: 30px;
+  margin-top: 0;
+  margin-bottom: 30px;
+  padding-top: 0;
+
+  font-family: 'Montserrat', sans-serif;
+  font-size: 22px;
+  font-weight: 600;
+  font-style: normal;
+  line-height: 27px;
+  color: #000000;
+  text-align: center;
+}
+
+.profile_avatar {
+  width: 96px;
+  height: 96px;
+
+  object-fit: cover;
+  object-position: center;
+  border-radius: 100%;
+}
+
+.profile_avatarImg {
+  position: relative;
+}
+
+.profile_avatarDownload {
+  cursor: pointer;
+
+  position: absolute;
+  z-index: 100;
+  top: 55px;
+  right: 80px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 30px;
+  height: 30px;
+
+  background-color: gray;
+  border-radius: 100%;
 }
 
 .profileButton {
+  cursor: pointer;
 
-    background: none;
-    border: none;
-    padding: 0;
-    cursor: pointer;
-    outline: inherit;
-    margin-top: 28px;
-    height: 36px;
-    min-width: 127px;
-    width: fit-content;
-    line-height: 20px;
-    text-align: center;
-    letter-spacing: 0.01em;
-    background: #FCFCFC;
-    box-shadow: 0px 2px 10px rgb(109 109 109 / 25%), inset 0px 1px 0px rgb(255 255 255 / 30%);
-    border-radius: 30px;
-    position: relative;
-    font-family: 'Montserrat', sans-serif;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 20px;
-    letter-spacing: 0.01em;
-    color: #000000;
-    opacity: 0.8;
-    padding-left: 18px;
-    padding-top: 2px;
+  position: relative;
+
+  width: fit-content;
+  min-width: 127px;
+  height: 36px;
+  margin-top: 28px;
+  padding: 2px 0 0 18px;
+
+  font-family: 'Montserrat', sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  font-style: normal;
+  line-height: 20px;
+  line-height: 20px;
+  color: #000000;
+  text-align: center;
+  letter-spacing: 0.01em;
+  letter-spacing: 0.01em;
+
+  opacity: 0.8;
+  background: none;
+  background: #fcfcfc;
+  border: none;
+  border-radius: 30px;
+  outline: inherit;
+  box-shadow: 0px 2px 10px rgb(109 109 109 / 25%), inset 0px 1px 0px rgb(255 255 255 / 30%);
 }
 
 .profileButton:before {
-    content: '';
-    background-image: url("./img/logout.svg");
-    width: 16px;
-    height: 16px;
-    background-repeat: no-repeat;
-    background-position: center;
-    margin-right: 5px;
-    display: block;
-    position: absolute;
-    top: 10px;
-    left: 21px;
+  content: '';
+
+  position: absolute;
+  top: 10px;
+  left: 21px;
+
+  display: block;
+
+  width: 16px;
+  height: 16px;
+  margin-right: 5px;
+
+  background-image: url('./img/logout.svg');
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
-
 .profile_backbutton {
-    font-family: 'Montserrat', sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 24px;
-    /* identical to box height, or 171% */
+  cursor: pointer;
 
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 
-    color: #000000;
-    background: no-repeat;
-    border: none;
-    outline: none;
-padding: 0;
+  padding: 0;
+
+  font-family: 'Montserrat', sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  font-style: normal;
+  line-height: 24px;
+  color: #000000;
+
+  background: no-repeat;
+  border: none;
+  outline: none;
 }
 
 .profile_backbutton:before {
-    content: '';
-    background-image: url("./img/arrow.svg");
-    width: 14px;
-    height: 11px;
-    background-repeat: no-repeat;
-    background-position: center;
-    margin-right: 14px;
+  content: '';
+
+  width: 14px;
+  height: 11px;
+  margin-right: 14px;
+
+  background-image: url('./img/arrow.svg');
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .backbutton_wrapper {
-    margin-top: 23px;
-    margin-bottom: 11px;
+  margin-top: 23px;
+  margin-bottom: 11px;
 }
 
 .profileName span {
-    margin-top: 13px;
+  margin-top: 13px;
 }
 
 .profileName {
-    margin-top: 13px;
+  margin-top: 13px;
 }
 
 .profileName span {
-    font-family: 'Montserrat', sans-serif;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 24px;
-    color: #000000;
-
+  font-family: 'Montserrat', sans-serif;
+  font-size: 20px;
+  font-weight: 500;
+  font-style: normal;
+  line-height: 24px;
+  color: #000000;
 }
 
 .editIcon {
-    margin-left: 9px;
+  margin-left: 9px;
 }
-
 
 .profileEmail {
-    font-family: 'Montserrat', sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 24px;
-    opacity: 0.5;
-    margin-top: 15px;
+  margin-top: 15px;
+
+  font-family: 'Montserrat', sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  font-style: normal;
+  line-height: 24px;
+
+  opacity: 0.5;
 }
-
-
-
-
