--- a/src/features/header/Header.module.css
+++ b/src/features/header/Header.module.css
@@ -13,10 +13,19 @@
 .header_avatar {
   cursor: pointer;
 
-  width: 36px;
-  height: 36px;
+  width: 40px;
+  height: 40px;
 
   border-radius: 100%;
+}
+
+.userName {
+  cursor: pointer;
+
+  margin-right: 10px;
+
+  font-size: 18px;
+  font-weight: 500;
 }
 
 .headerAvatar {
