--- a/src/common/components/loader/Loader.module.css
+++ b/src/common/components/loader/Loader.module.css
@@ -1,25 +1,23 @@
 .loader_background {
-  position: absolute;
-  z-index: 1000;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
+  position: relative;
+
   display: flex;
   align-items: center;
   justify-content: center;
-
 }
 
 .loader {
   z-index: 1001;
-  width: 90px;
-  height: 90px;
-  border: 20px solid #f3f3f3;
-  border-top: 15px solid #366eff;
-  border-radius: 50%;
-  animation: spin 1s linear infinite;
+
+  width: 120px;
+  height: 120px;
   margin-top: 20%;
+
+  border: 20px solid #f3f3f3;
+  border-top: 20px solid #366eff;
+  border-radius: 50%;
+
+  animation: spin 1s linear infinite;
 }
 
 @keyframes spin {
